update company details

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -275,7 +275,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2><a href="resume.pdf" dowjn><button class="button-1" id="down"> Resume Downlaod</button></a>
+          <h2>Resume</h2><a href="Resume.pdf" dowjn><button class="button-1" id="down"> Resume Downlaod</button></a>
           <p>Having probably year of work experience looking forward to shift wherein I can utilize
             my experience with respect to Project Management and development in contributing effectively to success of the organization and also for further improvement of my personal
             and professional skills.</p>
